<resources>
    <string name="app_name">Peanuts Wifi</string>


    <string name="action_settings">Automation settings</string>
    <string name="action_settings2">others</string>
    <string name="ssid">SSID</string>
    <string name="passwd">password</string>
    <string name="connect">Connect</string>
    <string name="clear">Clear</string>
    <string name="scan">scan</string>
    <string name="cur_ssid">SSID: %1$s</string>
    <string name="cur_bssid">BSSID: </string>
    <string name="cur_speed">Speed: </string>
    <string name="cur_ip">IP: </string>
    <string name="cur_freq">Freq: </string>
    <string name="iperf">iperf</string>
    <string name="speedtest">speedtest</string>
    <string name="version">version</string>
    <string name="website">browser</string>


    <string name="update_speed">Downlink: %s KB/s</string>
    <string name="update_speed_uplink">Uplink: %s KB/s</string>
    <string name="downlink">Downlink: 0 KB/s</string>
    <string name="uplink">Uplink: 0 KB/s</string>
    <string formatted="false" name="update_downloaded_complete">Downlink complete: %s KB/s</string>
    <string formatted="false" name="update_uploaded_complete">Uplink complete: %s KB/s</string>
    <string name="start_speedtest">start</string>


    <string name="url">URL:</string>
    <string name="start_browser">start</string>

</resources>
