<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:gravity="bottom">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ssid"
        android:inputType="none"
        android:textSize="12sp"
        android:textStyle="bold"
        android:singleLine="true"
        android:editable="true"
        android:hint="@string/ssid" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_encryp"
        android:textSize="12sp"
        android:layout_below="@+id/ssid"
        android:spinnerMode="dialog"
        android:visibility="visible" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwd"
        android:layout_below="@+id/spinner_encryp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:password="true"
        android:singleLine="true"
        android:editable="true"
        android:hint="@string/passwd"
        android:clickable="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:textSize="12sp"
        android:onClick="connect"
        android:text="@string/connect"
        android:layout_below="@+id/passwd" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:textSize="12sp"
        android:text="@string/clear"
        android:onClick="clearConnect"
        android:layout_alignTop="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:textSize="12sp"
        android:text="@string/scan"
        android:onClick="scan"
        android:layout_below="@+id/passwd"
        android:layout_toEndOf="@+id/button2" />

    <ToggleButton android:id="@+id/toggleButton"
        android:layout_height="wrap_content" android:layout_width="wrap_content"
        android:text="@string/iperf" android:textOn="iperf" android:textOff="iperf"
        android:textSize="12sp"
        android:onClick="ToggleButtonClick"
        android:layout_below="@+id/passwd"
        android:layout_toEndOf="@+id/button3"
        android:layout_alignBottom="@+id/button3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speedtest"
        android:textSize="12sp"
        android:id="@+id/speedtest"
        android:layout_below="@+id/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:textSize="12sp"
        android:id="@+id/browserBtnMain"
        android:layout_below="@+id/button"
        android:layout_toEndOf="@+id/speedtest" />

    <TextView
        android:text="@string/cur_ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cur_ssid"
        android:textSize="12sp"
        android:layout_below="@+id/speedtest" />

    <TextView
        android:text="@string/cur_bssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cur_bssid"
        android:textSize="12sp"
        android:layout_below="@+id/cur_ssid" />

    <TextView
        android:text="@string/cur_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cur_speed"
        android:textSize="12sp"
        android:layout_below="@+id/cur_bssid" />

    <TextView
        android:text="@string/cur_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cur_ip"
        android:textSize="12sp"
        android:layout_below="@+id/cur_speed" />

    <TextView
        android:text="@string/cur_freq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cur_freq"
        android:textSize="12sp"
        android:layout_below="@+id/cur_ip" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cur_freq"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/version"
            android:id="@+id/version"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>


</RelativeLayout>
